# ner-viewer

./: .gitignore  BUILD.bazel  Pipfile  README.md  WORKSPACE  package.json  tsconfig.json
data/: BUILD.bazel
scripts/: debug_server.sh  run_server.sh
viewer_app/server/: BUILD.bazel  index.html  server.py
viewer_app/server/db/: BUILD.bazel  article_database.py  compound_tags.py
viewer_app/server/models/: BUILD.bazel  compound_tags.py  tags.py
viewer_app/web/: BUILD.bazel  form.tsx  main.tsx  rollup.config.js  rollup.dev.config.js
viewer_app/web/api/: api.ts
viewer_app/web/models/: Article.ts
viewer_app/web/store/: store.ts
viewer_app/web/styles/: article.scss  common.scss  entities.scss  form.scss
viewer_app/web/views/: articleView.tsx  error.tsx  form.tsx
