genrule(
    name = 'bundle.js_',
    srcs = ['//viewer_app/web:bundle.js'],
    outs = ['static/scripts/bundle.js'],
    cmd = "cp $< $@",
)

py_binary(
    name = "run_server",
    main = "server.py",
    srcs = ['server.py'],
    deps = [
        "//viewer_app/server/db"
    ],
    data = [
        "index.html",
        "static/scripts/bundle.js",
        '//data:tagged_ctd.db',
    ],
    args = [
        '--database', '$(location //data:tagged_ctd.db)',
    ]
)