load('@build_bazel_rules_nodejs//:index.bzl', 'copy_to_bin')
load('@npm_bazel_typescript//:index.bzl', 'ts_library')
load('@npm_bazel_rollup//:index.bzl', 'rollup_bundle')

ts_library(
    name = 'lib',
    srcs = glob(['**/*.ts', '**/*.tsx']),
    deps = [
        '@npm//effector',
        '@npm//effector-react',
        '@npm//@types/react',
        '@npm//@types/react-dom',
    ]
)

_rollup_plugins = [
    '@npm//@rollup/plugin-node-resolve',
    '@npm//@rollup/plugin-commonjs',
    '@npm//@rollup/plugin-replace',
    '@npm//rollup-plugin-postcss',
    '@npm//rollup-plugin-terser',
]

copy_to_bin(
    name = 'css',
    srcs = glob(['**/*.css', '**/*.scss'])
)

rollup_bundle(
    name = 'bundle',
    visibility = ['//visibility:public'],
    deps = [
        ':css',
        ':lib',
        '@npm//react',
        '@npm//react-dom',
        '@npm//bootstrap',
        '@npm//node-sass',
    ] + _rollup_plugins,
    format = 'umd',
    config_file = ':rollup.config.js',
    entry_point = 'main.tsx',
)