load('@build_bazel_rules_nodejs//:index.bzl', 'copy_to_bin')
load('@npm_bazel_typescript//:index.bzl', 'ts_library')
load('@npm_bazel_rollup//:index.bzl', 'rollup_bundle')

ts_library(
    name = 'lib',
    srcs = glob(['**/*.ts', '**/*.tsx']),
    deps = [
        '@npm//effector',
        '@npm//effector-react',
        '@npm//@types/react',
        '@npm//@types/react-dom',
        '@npm//@types/react-router-dom',
        '@npm//@types/history',
        "@npm//@fortawesome/react-fontawesome",
        "@npm//@fortawesome/free-solid-svg-icons",
    ]
)

_rollup_plugins = [
    '@npm//@rollup/plugin-node-resolve',
    '@npm//@rollup/plugin-commonjs',
    '@npm//@rollup/plugin-replace',
    '@npm//rollup-plugin-postcss',
    '@npm//rollup-plugin-terser',
]

copy_to_bin(
    name = 'css',
    srcs = glob(['**/*.css', '**/*.scss'])
)

config_setting(
    name = "dev",
    define_values = {
        'env': 'dev'
    }
)
config_setting(
    name = "prod",
    define_values = {
        'env': 'prod'
    }
)

rollup_bundle(
    name = 'bundle',
    visibility = ['//visibility:public'],
    deps = [
        ':css',
        ':lib',
        '@npm//react',
        '@npm//react-dom',
        '@npm//react-router-dom',
        '@npm//bootstrap',
        '@npm//node-sass',
    ] + _rollup_plugins,
    format = 'umd',
    config_file = select({
        ':dev': 'rollup.dev.config.js',
        ':prod': 'rollup.config.js',
        '//conditions:default': 'rollup.config.js',
    }),
    entry_point = 'main.tsx',
    sourcemap = "inline",
)